--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,16 @@
+#!/usr/bin/bash
+#add paths to run file
+cat #!/usr/bin/bash > temp
 cat path1=`pwd` >> temp
+cat runEpitopeDB_neoepitopes.sh >>temp
 mv temp runEpitopeDB_neoepitopes.sh
+
+cat #!/usr/bin/bash > temp
+cat path1=`pwd` >> temp
+cat run_neoepitopes.sh >>temp
+mv temp run_neoepitopes.sh
+
+#change permissions and add to path
 chmod +x runEpitopeDB_neoepitopes.sh run_neoepitopes.sh
 export PATH=`pwd`:$PATH
 echo "PATH=\"`pwd`:\$PATH\"" >> ~/.bash_profile
